# scyan

./: .gitattributes  .gitignore  .gitlab-ci.yml  .template.env  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run.py  sitemap.xml  testing.py  timing.py
.github/actions/setup-python-env/: action.yaml
.github/workflows/: ci.yml
advanced/data/: data.md  index.html
advanced/hydra_wandb/: hydra_wandb.md  index.html
advanced/parameters/: index.html  parameters.md
advanced/scripts/: index.html  scripts.md
advice/: index.html
api/coupling_layer/: coupling_layer.md  index.html
api/datasets/: datasets.md  index.html
api/io/: index.html
api/loss_mmd/: index.html
api/model/: index.html  model.md
api/module/: index.html
api/plots/: index.html  plots.md
api/preprocess/: index.html
api/prior/: index.html  prior.md
api/real_nvp/: index.html  real_nvp.md
api/tools/: index.html  tools.md
cite/: cite.md  index.html
config/: README.md  config.yaml
config/callbacks/: default.yaml
config/model/: scyan.yaml
config/project/: aml.yaml  bmmc.yaml  infinity_flow.yaml  poised.yaml  pop_durva.yaml  scyan.yaml
config/sweeper/: optuna.yaml
config/trainer/: all_params.yaml  default.yaml  gpu.yaml
data/: README.md  aml.csv  bmmc.csv
data/aml/: default.csv  short.h5ad  table.csv
data/bmmc/: default.csv
data/debarcoding/: default.csv
data/poised/: default.csv
docs/: Makefile  advice.md  cite.md  getting_started.md  index.md  math.md  parameters.md
docs/advanced/: advice.md  data.md  hydra_wandb.md  parameters.md  scripts.md
docs/api/: add.md  analysis.md  asinh.md  auto_logicle.md  datasets.md  io.md  kde_per_population.md  latent_expressions.md  latent_heatmap.md  load.md  loss_mmd.md  model.md  module.md  plot_umap.md  plots.md  preprocess.md  preprocessing.md  probs_per_marker.md  read_fcs.md  representation.md  scale.md  scatter.md  subcluster.md  subclusters.md  tools.md  umap.md  unscale.md  write_fcs.md
docs/source/: api.rst  conf.py  getting_started.rst  index.rst  modules.rst  scyan.rst
docs/source/_autosummary/: scyan.Scyan.pi_hat.rst  scyan.Scyan.rst  scyan.data.AdataDataset.rst  scyan.data.load.rst  scyan.data.rst  scyan.metric.AnnotationMetrics.rst  scyan.metric.rst  scyan.model.Scyan.pi_hat.rst  scyan.model.Scyan.rst  scyan.model.rst  scyan.module.ScyanModule.eps.rst  scyan.module.ScyanModule.log_pi.rst  scyan.module.ScyanModule.pi.rst  scyan.module.ScyanModule.prior_z.rst  scyan.module.ScyanModule.rst  scyan.module.coupling_layer.CouplingLayer.rst  scyan.module.coupling_layer.rst  scyan.module.real_nvp.RealNVP.rst  scyan.module.real_nvp.rst  scyan.module.rst  scyan.module.scyan_module.ScyanModule.eps.rst  scyan.module.scyan_module.ScyanModule.log_pi.rst  scyan.module.scyan_module.ScyanModule.pi.rst  scyan.module.scyan_module.ScyanModule.prior_z.rst  scyan.module.scyan_module.ScyanModule.rst  scyan.module.scyan_module.rst  scyan.plot.kde_per_population.rst  scyan.plot.latent_expressions.rst  scyan.plot.marker_matrix_reconstruction.rst  scyan.plot.pop_weighted_kde.rst  scyan.plot.probs_per_marker.rst  scyan.plot.rst  scyan.rst  scyan.utils.process_umap_latent.rst  scyan.utils.root_path.rst  scyan.utils.rst  scyan.utils.wandb_plt_image.rst
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
docs/tutorials/: advanced.ipynb  aml.ipynb  batch_effect_correction.ipynb  bmmc.ipynb  debarcoding.ipynb  population_discovery.ipynb  post_analysis.ipynb  preprocessing.ipynb  usage.ipynb
getting_started/: getting_started.md  index.html
math/: index.html
scripts/: README.md  lisi.py  run.py  testing.py  timing.py  utils.py
scyan/: __init__.py  _io.py  baseline.py  callback.py  data.py  datamodule.py  io.py  metric.py  mmd.py  model.py  module.py  modules.py  plot.py  preprocess.py  utils.py
scyan/data/: __init__.py  datasets.py  download.py  tensors.py
scyan/metric/: kl_divergence.py
scyan/module/: __init__.py  coupling_layer.py  distribution.py  mmd.py  real_nvp.py  scyan_module.py
scyan/plot/: __init__.py  densities.py  density.py  dot.py  expressions.py  graph.py  heatmap.py  ratios.py  scatterplot.py  utils.py
scyan/plot/_scanpy_plot/: README.md  __init__.py  palettes.py  plot_settings.py  umap.py
scyan/tools/: __init__.py  biomarkers.py  colors.py  gating.py  preprocessing.py  representation.py  result_analysis.py
search/: search_index.json
tests/: test_analysis.py  test_init.py  test_plots.py  test_preprocess.py  test_run.py  test_tools.py
tutorials/: aml_demo.ipynb  fcs_preprocessing.ipynb  getting_started.ipynb
tutorials/advanced/: index.html
tutorials/batch_effect_correction/: batch_effect_correction.ipynb  index.html
tutorials/debarcoding/: debarcoding.ipynb  index.html
tutorials/population_discovery/: index.html  population_discovery.ipynb
tutorials/post_analysis/: index.html
tutorials/preprocessing/: index.html  preprocessing.ipynb
tutorials/usage/: index.html  usage.ipynb
