[project]
name = "scyan"
version = "1.6.2"
description = "Single-cell Cytometry Annotation Network"
authors = [{ name = "Blampey Quentin", email = "quentin.blampey@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "anndata>=0.12.0",
  "torch>=2.2.0",
  "lightning>=2.2.0",
  "seaborn>=0.12.2",
  "umap-learn>=0.5.3",
  "llvmlite>=0.38.1",
  "FlowUtils>=1.2.0",
  "fcsparser>=0.2.4",
  "fcswrite>=0.6.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.1.2",
  "ipykernel>=6.15.0",
  "ipywidgets>=7.7.1",
  "isort>=5.10.1",
  "black>=22.6.0",
  "mkdocs-material>=8.5.0",
  "mkdocstrings>=0.19.0",
  "mkdocstrings-python>=0.7.1",
  "mkdocs-jupyter>=0.21.0",
]
hydra = [
  "wandb>=0.13.7",
  "hydra-core>=1.2.0",
  "hydra-colorlog>=1.2.0",
  "hydra-optuna-sweeper>=1.2.0",
]
discovery = ["leidenalg>=0.8.10"]

[project.urls]
Homepage = "https://mics-lab.github.io/scyan/"
Repository = "https://github.com/MICS-Lab/scyan"
Documentation = "https://mics-lab.github.io/scyan/"

[tool.uv.build-backend]
module-name = ["scyan"]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning", "ignore:::.*anndata*"]

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

[tool.isort]
profile = "black"
skip_glob = ["*/__init__.py"]
