[project]
name = "scyan"
version = "1.7.5"
description = "Single-cell Cytometry Annotation Network"
authors = [{ name = "Blampey Quentin", email = "quentin.blampey@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "anndata>=0.12.0",
  "torch>=2.2.0",
  "lightning>=2.2.0",
  "seaborn>=0.12.2",
  "umap-learn>=0.5.3",
  "llvmlite>=0.38.1",
  "FlowUtils>=1.2.0",
  "fcsparser>=0.2.4",
  "fcswrite>=0.6.2",
  "requests>=2.33.1",
]

[project.optional-dependencies]
discovery = ["leidenalg>=0.8.10"]

[dependency-groups]
dev = [
  "ruff>=0.11.4",
  "pre-commit>=3.8.0",
  "pytest>=7.1.2",
  "ipykernel>=6.15.0",
  "ipywidgets>=7.7.1",
  "mkdocs-material>=8.5.0",
  "mkdocstrings>=0.19.0",
  "mkdocstrings-python>=0.7.1",
  "mkdocs-jupyter>=0.21.0",
  "wandb>=0.13.7",
  "hydra-core>=1.2.0",
  "hydra-colorlog>=1.2.0",
  "hydra-optuna-sweeper>=1.2.0",
]

[project.urls]
Homepage = "https://prism-oncology.github.io/scyan/"
Repository = "https://github.com/prism-oncology/scyan"
Documentation = "https://prism-oncology.github.io/scyan/"

[tool.hatch.build.targets.sdist]
include = ["scyan"]

[tool.hatch.build.targets.wheel]
packages = ["scyan"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  "TRY",
]
ignore = [
  # LineTooLong
  "E501",
  # DoNotAssignLambda
  "E731",
  # DoNotUseAssert
  "S101",
  "TRY003",
  "RUF012",
  "B904",
  "E722",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"__init__.py" = ["F401", "I001"]
"*.ipynb" = ["F401"]

[tool.ruff.format]
preview = true
